--- a/public/posts/basicspa-oauthworkflow.mdx
+++ b/public/posts/basicspa-oauthworkflow.mdx
@@ -119,7 +119,7 @@ Authorization requests sometimes result in authorization response errors. You ca
         "authority":              "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9",
         "clientId":               "hje94a2jj3lgkobkh57ikenhh",
         "redirectUri":            "https://www.authsamples-dev.com/spa",
-        "postLogoutRedirectUri":  "https://www.authsamples-dev.com/spa/loggedout.html",
+        "postLogoutRedirectUri":  "https://www.authsamples-dev.com/spa/loggedout",
         "scope":                  "openid profile https://api.authsamples.com/investments xxx",
         "customLogoutEndpoint":   "https://login.authsamples.com/logout"
     }
