--- a/public/posts/api-journey-client-side.mdx
+++ b/public/posts/api-journey-client-side.mdx
@@ -179,7 +179,7 @@ export class FetchCache {
 
 ### Detecting Login Required
 
-When frontends first make API requests, they do not have an API message credential so cannot call APIs. The fetch client throws a *login_required* error which the fetch cache stores. Multiple views could throw this error at the same time so a *ViewModelCoordinator* object waits for all views to try to load, then inspects the fetch cache. When required, it publishes an event that the main view subscribes to. The main view's handler then triggers a login redirect.
+When frontends first make API requests, they do not have an API message credential so cannot call APIs. The fetch client throws a *login_required* error which the fetch cache stores. Multiple views could throw this error at the same time so a *ViewModelCoordinator* object waits for all views to try to load, then inspects the fetch cache. When required, it publishes an event that the main view subscribes to. The main view's handler then presents a login required view to the user.
 
 ### Running a Code Flow
 
@@ -273,6 +273,15 @@ public async execute(action: () => Promise<void>): Promise<void> {
 ```
 
 Eventually the client's refresh token also expires. This can be simulated by clicking *Expire Refresh Token* followed by *Reload Data*. The token refresh request then returns an *invalid_grant* error code. The client then triggers another login redirect, in the same way as the initial login redirect.
+
+### Usability Control
+
+In OAuth deployments, APIs can issue security challenges to the frontend:
+
+- APIs keep access tokens short-lived by returning HTTP 401 responses with an *invalid_token* error code. 
+- APIs keep access tokens least-privilege by returning HTTP 403 responses with an *insufficient_scope* error code.
+
+API clients should initiate their own API requests for secured data. The frontend can then respond to challenges and guide the user. The frontend also has best reliability control, even when it sends concurrent API requests.
 
 ### Deep Linking
 
